--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ macroquad = "0.3.23"
 lazy_static = "1.4.0"
 regex = "1.5.5"
 #graplot = "0.1.19"
+
+[dev-dependencies]
+bencher = "0.1.5"
+
+[[bench]]
+name = "interpret_fn"
+harness = false
